@@ -1556,6 +1556,14 @@ int parse_tologin(int fd) {
 			RFIFOSKIP(fd,50);
 			break;
 
+		// login-server alive packet
+		case 0x2718:
+			if (RFIFOREST(fd) < 2)
+				return 0;
+			// do whatever it's supposed to do here?
+			RFIFOSKIP(fd,2);
+			break;
+
 /*		case 0x2721:	// gm reply. I don't want to support this function.
 			printf("0x2721:GM reply\n");
 		  {
